add h1 and reference to google map script

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<h1>Neigborhood Map</h1>
 
+<script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCVhzLWUa0SkOHF8FAAZDw9KQYl2EcL9ew"></script>
 <script src="knockout-3.4.1.js"></script>
 <script src="app.js"></script>
 </body>
