--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   }
 </script>
 
-<script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCa4KpuiP-TagaPCyb40gaVNCZi2MMD3C0&callback=initMap"></script>
+<script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCa4KpuiP-TagaPCyb40gaVNCZi2MMD3C0&v3&callback=initMap"></script>
 <script src="bower_components/knockout/dist/knockout.js"></script>
 <script src="app.js"></script>
 </body>
