--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head lang="en">
   <title>Neighborhood Map</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1.0">
+
+  <!-- <link rel="stylesheet" href="styles.css"> -->
+
   <style>
     html,
     body {
@@ -22,15 +26,22 @@
 <script>
   var map;
   function initMap() {
-    // Constructor creates a new map - only center and zoom are required.
+    // Constructor to create a new map
     map = new google.maps.Map(document.getElementById('map'), {
-      center: {lat: 40.7413549, lng: -73.9980244},
+      center: { lat: 40.7413549, lng: -73.9980244 },
       zoom: 13
     });
+
+    // var locationName = { lat: , lng: };
+    // var marker = new google.maps.Marker({
+    //   position: locationName,
+    //   map: map,
+    //   title: ''
+    // });
   }
 </script>
 
-<script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCa4KpuiP-TagaPCyb40gaVNCZi2MMD3C0&v3&callback=initMap"></script>
+<script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCa4KpuiP-TagaPCyb40gaVNCZi2MMD3C0&callback=initMap"></script>
 <script src="bower_components/knockout/dist/knockout.js"></script>
 <script src="app.js"></script>
 </body>
