--- a/index.html
+++ b/index.html
@@ -16,13 +16,56 @@
       padding: 0;
     }
 
-    #map {
+    .container {
       height: 100%;
+      position: relative;
+    }
+
+    input {
+      font-size: 12px;
+    }
+
+    h1 {
+      color: #525454;
+      font-size: 22px;
+      margin: 0 0 10px 0;
+      text-align: center;
+    }
+
+    #hide-listings,
+    #show-listings {
+      width: 48%;
+    }
+
+    #map {
+      bottom:0px;
+      height: 100%;
+      left: 362px;
+      position: absolute;
+      right: 0px;
+    }
+
+    .options-box {
+      background: #fff;
+      border: 1px solid #999;
+      border-radius: 3px;
+      height: 100%;
+      line-height: 35px;
+      padding: 10px 10px 30px 10px;
+      text-align: left;
+      width: 340px;
     }
   </style>
 </head>
 <body>
-<div id="map"></div>
+  <div class="container">
+    <div class="options-box">
+      <h1>See Bars Around Bushwick</h1>
+      <input type="button" id="show-listings" value="Show Listings">
+      <input type="button" id="hide-listings" value="Hide Listings">
+    </div>
+    <div id="map"></div>
+  </div>
 <script>
   // global map object
   var map;
