--- a/index.html
+++ b/index.html
@@ -4,58 +4,7 @@
   <title>Neighborhood Map</title>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0">
-
-  <!-- <link rel="stylesheet" href="styles.css"> -->
-
-  <style>
-    html,
-    body {
-      font-family: Arial, sans-serif;
-      height: 100%;
-      margin: 0;
-      padding: 0;
-    }
-
-    .container {
-      height: 100%;
-      position: relative;
-    }
-
-    input {
-      font-size: 12px;
-    }
-
-    h1 {
-      color: #525454;
-      font-size: 22px;
-      margin: 0 0 10px 0;
-      text-align: center;
-    }
-
-    #hide-listings,
-    #show-listings {
-      width: 48%;
-    }
-
-    #map {
-      bottom:0px;
-      height: 100%;
-      left: 362px;
-      position: absolute;
-      right: 0px;
-    }
-
-    .options-box {
-      background: #fff;
-      border: 1px solid #999;
-      border-radius: 3px;
-      height: 100%;
-      line-height: 35px;
-      padding: 10px 10px 30px 10px;
-      text-align: left;
-      width: 340px;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
@@ -66,116 +15,6 @@
     </div>
     <div id="map"></div>
   </div>
-<script>
-  // global map object
-  var map;
-  // global blank marker array
-  var markers = [];
-
-  function initMap() {
-    // Constructor to create a new map
-    map = new google.maps.Map(document.getElementById('map'), {
-      // center is Bushwich, Brooklyn
-      center: { lat: 40.694428, lng: -73.921286 },
-      zoom: 13
-    });
-
-/* Single point marker
-
-    // Marker for Heavy Woods
-    var heavyWoods = { lat: 40.705606, lng: -73.921648 };
-    var marker = new google.maps.Marker({
-      position: heavyWoods,
-      map: map,
-      title: 'Heavy Woods'
-    });
-
-    // Info Window for Heavy Woods
-    var infoWindow = new google.maps.InfoWindow({
-      content: 'Heavy Woods'
-    });
-
-    // event listener for infowindow
-    marker.addListener('click', function() {
-      infoWindow.open(map, marker);
-    });
-
-*/
-
-    // Locations array for bars around Bushwick, Brooklyn
-    var locations = [
-      {title: 'Heavy Woods', location: {lat: 40.705606, lng: -73.921648}},
-      {title: 'Pearl\'s Social & Billy Club', location: {lat: 40.707065, lng: -73.921355}},
-      {title: 'Sally Roots', location: {lat: 40.702754, lng: -73.916373}},
-      {title: 'The Rookery Bar', location: {lat: 40.707404, lng: -73.922462}},
-      {title: 'Boobie Trap', location: {lat: 40.70015, lng: -73.91604}}
-    ];
-
-    var largeInfoWindow = new google.maps.InfoWindow();
-    var bounds = new google.maps.LatLngBounds();
-
-    // Use the location array to create an array of markers on initialize
-    for (var i = 0; i < locations.length; i++) {
-      // Get the position from location array
-      var position = locations[i].location;
-      var title = locations[i].title;
-
-      // Create a marker per location, and put into markers array
-      var marker = new google.maps.Marker({
-        position: position,
-        map: map,
-        title: title,
-        animation: google.maps.Animation.DROP,
-        id: i
-      });
-
-      // Push the marker into array of markers.
-      markers.push(marker);
-
-      // Create onclick event to open an infowindow for each marker
-      marker.addListener('click', function() {
-        populateInfoWindow(this, largeInfoWindow);
-      });
-      bounds.extend(markers[i].position);
-    }
-
-    // Extend the boundaries of the map for each marker
-    map.fitBounds(bounds);
-
-    // Add event-listeners for show/hide listings buttons
-    document.getElementById('show-listings').addEventListener('click', showListings);
-    document.getElementById('hide-listings').addEventListener('click', hideListings);
-  }
-
-  // Loop through markers array and show all markers
-  function showListings() {
-    for (var i = 0; i < markers.length; i++) {
-      markers[i].setMap(map);
-    };
-  }
-
-  // Loop through markers and set them to null
-  function hideListings() {
-    for (var i = 0; i < markers.length; i++) {
-      markers[i].setMap(null);
-    };
-  }
-
-  // Populate infowindow when a marker is clicked
-  function populateInfoWindow(marker, infoWindow) {
-    // Check to make sure the infowindow is not already opened on this marker
-    if (infoWindow.marker != marker) {
-      infoWindow.marker = marker;
-      infoWindow.setContent('<div>' + marker.title + '</div>');
-      infoWindow.open(map, marker);
-
-      // Make sure the marker property is cleared if the infowindow is closed
-      infoWindow.addListener('closeclick', function() {
-        infoWindow.setMarker = null;
-      });
-    }
-  }
-</script>
 
 <script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCa4KpuiP-TagaPCyb40gaVNCZi2MMD3C0&callback=initMap"></script>
 <script src="bower_components/knockout/dist/knockout.js"></script>
