--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <input type="button" id="show-listings" value="Show Listings">
       <input type="button" id="hide-listings" value="Hide Listings">
       <ul id="locations-list" data-bind="foreach: locationList">
-        <li data-bind="text: title"></li>
+        <li data-bind="text: title, click: $parent.showInfo"></li>
       </ul>
     </div>
     <div id="map"></div>
