load places to the maps api and add todos

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="map"></div>
   </div>
 
-<script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCa4KpuiP-TagaPCyb40gaVNCZi2MMD3C0&callback=initMap"></script>
+<script async defer src="http://maps.googleapis.com/maps/api/js?&libraries=places&key=AIzaSyCa4KpuiP-TagaPCyb40gaVNCZi2MMD3C0&callback=initMap"></script>
 <script src="bower_components/knockout/dist/knockout.js"></script>
 <script src="app.js"></script>
 </body>
