add cancel button, not functional yet

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="options-box" data-bind="with: displayLoc">
       <h1>See Bars Around Bushwick</h1>
       <input type="form" id="filter" data-bind="value: $root.locName">
+      <input type="button" id="cancel" value="Cancel" data-bind="click: $root.cancel">
       <input type="button" id="show-listings" value="Show Listings"
         data-bind="click: $root.showListings">
       <input type="button" id="hide-listings" value="Hide Listings"
