improve search filter

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
   <div class="container">
     <div class="options-box" data-bind="with: displayLoc">
       <h1>See Bars Around Bushwick</h1>
-      <input type="form" id="filter" data-bind="value: $root.locName">
+      <input type="form" id="filter" data-bind="textInput: $root.searchValue"
+        placeholder="Search">
       <input type="button" id="cancel" value="Cancel" data-bind="click: $root.cancel">
       <input type="button" id="show-listings" value="Show Listings"
         data-bind="click: $root.showListings">
       <input type="button" id="hide-listings" value="Hide Listings"
         data-bind="click: $root.hideListings">
-      <ul id="locations-list" data-bind="foreach: $parent.locationList">
+      <ul id="locations-list" data-bind="foreach: $root.locationList">
         <li id="location" data-bind="text: title, click: $root.setLoc"></li>
       </ul>
       <div>
