--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       </ul>
       <div>
         <h2 id="display-title" data-bind="text: title"></h2>
+        <div>
+          <p>Google rating: <span id="rating">4.4</span>/5.0</p>
+        </div>
       </div>
     </div>
     <div id="map"></div>
