display address and open/closed

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       <div>
         <h2 id="display-title" data-bind="text: title"></h2>
         <div>
-          <p>Google rating: <span id="rating">4.4</span>/5.0</p>
+          <strong>Google rating:</strong> <span id="rating">4.4</span>/5.0<br>
+          <strong>Location:</strong> <span id="address">50 Wyckoff Avenue, Brooklyn</span><br>
+          <span id="hours"></span>
         </div>
       </div>
     </div>
