--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Neighborhood Map</title>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
   <div class="container">
@@ -32,6 +32,6 @@
 
 <script async defer src="http://maps.googleapis.com/maps/api/js?&key=AIzaSyCa4KpuiP-TagaPCyb40gaVNCZi2MMD3C0&libraries=places&callback=initMap"></script>
 <script src="bower_components/knockout/dist/knockout.js"></script>
-<script src="app.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
