--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
           <strong>Location:</strong> <span id="address">50 Wyckoff Avenue, Brooklyn</span><br>
           <span id="hours"></span>
         </div>
+        <div class="foursquare-container">
+          <h3 id="foursquare-header"></h3>
+          <p id="foursquare-data"></p>
+        </div>
       </div>
     </div>
     <div id="map"></div>
@@ -32,6 +36,7 @@
 
 <script async defer src="http://maps.googleapis.com/maps/api/js?&key=AIzaSyCa4KpuiP-TagaPCyb40gaVNCZi2MMD3C0&libraries=places&callback=initMap"></script>
 <script src="bower_components/knockout/dist/knockout.js"></script>
+<script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
