--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
   <title>Neighborhood Map</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
