change <div> of map to <main>

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </ul>
     </div>
   </nav>
-  <div id="map"></div>
+  <main id="map"></main>
 </div>
 
 <script src="bower_components/knockout/dist/knockout.js"></script>
