<br> after 'photo not available' and not italicized

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-  <title>Neighborhood Map</title>
+  <title>Bushwick Bars</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/styles.css">
@@ -14,7 +14,7 @@
         <path d="M2 6h20v3H2zm0 5h20v3H2zm0 5h20v3H2z"/>
       </svg>
     </a>
-    <h1>See Bars Around Bushwick</h1>
+    <h1>Bushwick Bars</h1>
   </header>
   <nav id="drawer" class="nav">
     <div class="options-box" data-bind="with: displayLoc">
