--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
 <script src="bower_components/knockout/dist/knockout.js"></script>
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/app.js"></script>
-<script async defer onerror="mapError()" src="http://maps.googleapis.com/maps/api/js?&key=AIzaSyCa4KpuiP-TagaPCyb40gaVNCZi2MMD3C0&libraries=places&callback=initMap"></script>
+<script async defer onerror="mapError()" src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyCa4KpuiP-TagaPCyb40gaVNCZi2MMD3C0&libraries=places&callback=initMap"></script>
 </body>
 </html>
